# spotty

./: .gitignore  CLAUDE.md  config.example.json  pyproject.toml  server.py  spotty.py
tests/: test_server.py  test_spotty.py
